objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>ChimpSync__email__c</fullName>
        <formula>IF(Contact.Id==null,Lead.Email,Contact.Email)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChimpSync__lastname__c</fullName>
        <formula>IF(Contact.Id!=null,Contact.LastName ,Lead.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChimpSync__member_id__c</fullName>
        <formula>IF(Contact.Id==null,&apos;l&apos;+Lead.Id,&apos;c&apos;+Contact.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Or Lead Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChimpSync__name__c</fullName>
        <formula>IF(Contact.Id!=null, Contact.FirstName , Lead.FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>